# .github

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .shellcheckrc  .yamllint  CODEOWNERS  pyproject.toml  renovate.json  settings.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  codeql.yml
actions/create-pr/: README.md  action.yml
actions/deploy/: README.md  action.yml
actions/env-deps/: README.md  action.yml
actions/git-auth/: README.md  action.yml
actions/lint/: README.md  action.yml
actions/lint-yaml/: README.md  action.yml
actions/match-branch/: README.md  action.yml
actions/merge/: README.md  action.yml
actions/rebase/: README.md  action.yml
actions/security-audit/: README.md  action.yml
actions/test/: README.md  action.yml
actions/trigger-events/: README.md  action.yml
docs/: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md
scripts/: __init__.py  ci-summary.js  cli.py  requirements.txt  validate-branch.sh
scripts/lib/: __init__.py  deploy.py  generators.py  helpers.sh  linters.py  release.py  utils.py
scripts/tests/: conftest.py  test_cli.py  test_deploy.py  test_generators.py  test_linters.py  test_release.py  test_utils.py
