[project]
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["scripts/tests"]
python_files = "test_*.py"
# No test classes used — all tests are standalone functions
python_classes = ""
python_functions = "test_*"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "N",   # pep8-naming
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "SIM", # flake8-simplify
  "S",   # flake8-bandit (security)
  "ANN", # flake8-annotations
]
ignore = [
  "S603",  # subprocess call with shell=False — intended for validated commands
  "S607",  # starting a process with a partial executable path
]

[tool.ruff.lint.per-file-ignores]
### Allow asserting and missing type hints in tests
"scripts/tests/*" = ["S101", "ANN"]
